--- a/contact.html
+++ b/contact.html
@@ -96,6 +96,17 @@
                 work of art as unique as you.
               </p>
             </div>
+            <div class="mt-5">
+              <p class="little-text">
+                This website was coded by MOGA and is open source on GitHub
+              </p>
+              <a
+                href="https://github.com/pris-moga/pris-universe-portfolio"
+                target="_blank"
+                title="Go to code on GitHub"
+                ><i class="fab fa-github"></i
+              ></a>
+            </div>
           </div>
           <div class="col-md-6 mb-4 text-center align-self-center">
             <div class="contact-info">
